--- a/index.html
+++ b/index.html
@@ -8,5 +8,21 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img
+  src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
+/>
+
+<img
+src=" https://s3.amazonaws.com/ironboard-learn/lion.jpg "
+alt="A lions Image"
+/>
+
+<img
+src="../images/my_company_logo.png"
+alt="A lions image"
+title="A lion found in game parks!"
+/>
+
+
   </body>
 </html>
