--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ alt="A lions Image"
 />
 
 <img
-src="../images/my_company_logo.png"
+src="https://s3.amazonaws.com/ironboard-learn/lion.jpg"
 alt="A lions image"
 title="A lion found in game parks!"
 />
